# dynamodelx

./: LICENSE  README.md  pyproject.toml
src/dynamodelx/: __init__.py
src/dynamodelx/tabular/: __init__.py
src/dynamodelx/tabular/UFA/: __init__.py  __main__.py  ufa.py
src/dynamodelx/utils/: activations.py  custom_arch.py  data.py  device.py  loss.py  metrics.py  optimizer.py  weights_init.py
